--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ JWT_SECRET=your-super-secret-jwt-key-here-make-it-very-long-and-secure
 RECAPTCHA_SECRET_KEY=your_recaptcha_secret
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://ayira-ecommerce-main.vercel.app,https://aaryansourcing.com,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://ayira-ecommerce-main.vercel.app,https://aaryansourcing.com,http://localhost:5173 , https://aaryan-admin.netlify.app
 
 # Performance
 LOG_LEVEL=info
