updated6 rrrrrrr.00rrrr0

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Server
-PORT=6000
+PORT=5000
 NODE_ENV=production
 
 # MongoDB
-MONGODB_URI=mongodb+srv://aaryansourcing:RSPm6aHQO2l9PRrX@cluster0.ez6upvr.mongodb.net/?appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=dfmivfkum
